workloads/ingresses/overlays/mochi/schema-registry-ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: schema-registry
  namespace: kafka
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`schema-registry.mochi.platform.dspdemos.com`)
      services:
        - name: schemaregistry
          port: 8081
          scheme: http
  tls:
    secretName: schema-registry-tls
